--- a/libraries/H5P.GreslernPresentation-1.25/src/styles/keyword-menu.css
+++ b/libraries/H5P.GreslernPresentation-1.25/src/styles/keyword-menu.css
@@ -2,8 +2,8 @@
   position: absolute;
   z-index: 3;
   top: 0;
-  right: 84.375%;
-  width: 31.25%;
+  right: 75%;
+  width: 25%;
   height: 100%;
   background: #fbfbfb;
   background: rgba(251, 251, 251, 0.9);
@@ -18,7 +18,7 @@
 
 .h5p-greslern-presentation .h5p-keywords-wrapper.h5p-open {
   opacity: 1;
-  right: 68.75%;
+  right: 75%;
   visibility: visible;
   -webkit-transition-delay: 0s;
   -moz-transition-delay: 0s;
